[gd_scene load_steps=8 format=3 uid="uid://bnb2o7fpmja8i"]

[ext_resource type="Script" path="res://Enemy.gd" id="1_provp"]
[ext_resource type="Script" path="res://States/State Machine.gd" id="3_dch8x"]
[ext_resource type="Script" path="res://States/Idle.gd" id="4_0vrs3"]
[ext_resource type="Script" path="res://States/Follow.gd" id="5_fh8hi"]
[ext_resource type="PackedScene" uid="uid://by8anv2g6c2vb" path="res://Assets/Maps/Ghost_Prototype.glb" id="6_17w8c"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_d6l6x"]

[sub_resource type="CylinderShape3D" id="CylinderShape3D_721fn"]
height = 3.0
radius = 5.0

[node name="Enemy" type="CharacterBody3D" groups=["enemies"]]
script = ExtResource("1_provp")
metadata/_edit_group_ = true

[node name="Ghost_Prototype2" parent="." instance=ExtResource("6_17w8c")]
transform = Transform3D(1.1, 0, 0, 0, 1.1, 0, 0, 0, 1.1, 0, 0, 0)

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
shape = SubResource("CapsuleShape3D_d6l6x")

[node name="NavigationAgent3D" type="NavigationAgent3D" parent="."]
path_desired_distance = 0.75
target_desired_distance = 3.0
path_height_offset = 1.0
path_max_distance = 100.01
avoidance_enabled = true
height = 2.0
radius = 1.0
keep_y_velocity = false
debug_enabled = true
debug_use_custom = true
debug_path_custom_color = Color(1, 0, 0, 1)
debug_path_custom_point_size = 5.0

[node name="DetectionArea" type="Area3D" parent="."]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 0, 1.5, 0)

[node name="CollisionShape3D" type="CollisionShape3D" parent="DetectionArea"]
shape = SubResource("CylinderShape3D_721fn")

[node name="RayCast3D" type="RayCast3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.5, 0)
target_position = Vector3(0, 0, 20)
collide_with_areas = true
debug_shape_custom_color = Color(1, 0.556863, 0, 1)
debug_shape_thickness = 5
metadata/_edit_group_ = true

[node name="State Machine" type="Node" parent="." node_paths=PackedStringArray("initial_state")]
script = ExtResource("3_dch8x")
initial_state = NodePath("Idle")

[node name="Idle" type="Node" parent="State Machine" node_paths=PackedStringArray("enemy")]
script = ExtResource("4_0vrs3")
enemy = NodePath("../..")

[node name="Follow" type="Node" parent="State Machine" node_paths=PackedStringArray("enemy")]
script = ExtResource("5_fh8hi")
enemy = NodePath("../..")

[connection signal="target_reached" from="NavigationAgent3D" to="." method="_on_navigation_agent_3d_target_reached"]
[connection signal="velocity_computed" from="NavigationAgent3D" to="." method="_on_navigation_agent_3d_velocity_computed"]
[connection signal="body_entered" from="DetectionArea" to="." method="_on_detection_area_body_entered"]
[connection signal="body_exited" from="DetectionArea" to="." method="_on_detection_area_body_exited"]
